[gd_scene load_steps=6 format=3 uid="uid://divmdpxily8n"]

[ext_resource type="Script" path="res://_code/state/cursor/cursor_state_machine.gd" id="1_48fg3"]
[ext_resource type="Script" path="res://_code/state/cursor/cursor_default_state.gd" id="2_07l7u"]
[ext_resource type="Script" path="res://_code/state/cursor/cursor_selected_state.gd" id="3_y34xs"]
[ext_resource type="Texture2D" uid="uid://d4df3dkt2ivv" path="res://icon.svg" id="4_lp5kq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5sag"]
size = Vector2(131, 134)

[node name="CursorStateMachine" type="Node" node_paths=PackedStringArray("state_default", "state_selected")]
script = ExtResource("1_48fg3")
state_default = NodePath("CursorDefaultState")
state_selected = NodePath("CursorSelectedState")

[node name="CursorDefaultState" type="Node" parent="."]
script = ExtResource("2_07l7u")

[node name="CursorSelectedState" type="Node" parent="."]
script = ExtResource("3_y34xs")

[node name="UISementes" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="UISementes"]
position = Vector2(466, 208)
texture = ExtResource("4_lp5kq")

[node name="Area2D" type="Area2D" parent="UISementes/Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UISementes/Sprite2D/Area2D"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_p5sag")
